--- a/carritoBasicAvanzado-main/package.json
+++ b/carritoBasicAvanzado-main/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "axios": "^1.7.2",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
